--- a/style.css
+++ b/style.css
@@ -19,18 +19,19 @@ header{
    
 }
 
-    #logoHeader{
+    img{
         height: auto;
         width: 90px;
         margin-right: auto;
         padding-top: 20px;
         align-self: flex-end;
 
-
     }
-    .menuHeader{
+
+    .menuheader{
         display: flex;
     }
+
     nav ul{
         display: flex;
         list-style-type: none;
@@ -39,3 +40,37 @@ header{
     nav li{
         margin-right: 20px;
     }
+
+    nav a{
+        text-decoration: none;
+    }
+
+.fa-map-marker-alt{
+        background-color: #f2f2f2;
+        padding: 10px 10px 10px 10px;
+
+        
+}
+
+    input{
+        padding: 10px 10px 10px 10px;
+        border: solid 2px #f2f2f2;
+    }
+
+    button{
+        color: white;
+        background-color: blue;
+        font-weight: bold;
+        padding: 10px 10px 10px 10px;
+        font-size: 1em;
+        border: none;
+
+    }
+
+.filtresearch{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    font-weight: bold;
+    
+}
