--- a/style.css
+++ b/style.css
@@ -539,12 +539,41 @@ aside .etoilebleu .etoilegrise{
         margin: 0px;
         font-family: "Ralewaybold";
         padding: 1em 0em 1em 1em;
+        
 }
 
-.nomAct{
+.nomlieu a{
         text-decoration: none;
         color: black;
 }
+
+/*      **      **      **Partie FOOTER**       **      **      **      **      */
+
+footer{
+        background-color: #F2F2F2;
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+}
+
+h5{
+        font-family: "Ralewaybold";
+        font-size: 0.9em;
+        margin-left: 40px;
+        
+}
+
+li{
+        margin: 15px 0px 15px 0px;
+        list-style-type: none;
+}
+
+.apropos, .nosheber, .assist{
+        width: 330px;
+}
+
+
+
 
 /*      **      **      **Mise en place du responsive design avec media queries**       **      **       */
 
@@ -702,7 +731,7 @@ aside .etoilebleu .etoilegrise{
     }
 
     .money, .famille{
-            margin-right: -6%;
+            margin-right: -12%;
     }
 
     .infosup{
@@ -724,6 +753,7 @@ aside .etoilebleu .etoilegrise{
                 flex-direction: column-reverse;
                 padding: 0px;
                 width: auto;
+                height: 2300px;
         }
 
         
@@ -749,10 +779,12 @@ aside .etoilebleu .etoilegrise{
             height: auto;
             background-color: white;
             justify-content: center;
+           
         }
 
     .casehotel{
             width: 100%;
+            
             
         }
 
@@ -764,50 +796,80 @@ aside .etoilebleu .etoilegrise{
         
 /*      **      **      **      **Responsive pour la partie activités**         **      **      **      */
 
+        .activity{      
+               
+                padding: 0px;
+                width: auto;
+                
+        }
         .activites{
                 display: flex;
-                
-                flex-wrap: wrap;
+                flex-direction: column;
                 width: auto;
-                justify-content: space-around;
-                margin-bottom: 0px;
-                align-items: initial;
+                
+                justify-content: flex-start;
+                align-items: center;
+                
+        
+                
                                 
         }
 
         .activity h2{
                 width: auto;
+                margin-left: 6%;
                 
         }
 
         .entier{
-                height: 150px;
+                height: 200px;
                 width: 90%;
-                margin-bottom: 10px;
-                
-
+                margin-bottom: 20px; 
         }
 
+        .cadrelong{
+                width: 100%;
+                height: 150px;
+                
+        }
 
-        .cadrelong, .frioul, .fort, .demicadre{
-                height: 100px;
-                width: auto;
+        .vuelong, .grosimg, .petitimg, .demiimg{
+                height: 100%;
+                object-fit: cover;
+                object-position: center;
+        }
+
+        .nomlieu{
+                height: 10px;
         }
 
         .demi{
+                display: flex;
+                flex-direction: column;
+                justify-content: space-evenly;
                 width: 90%;
-               
+                height: 400px;
+                align-items: center;
+                margin-bottom: 20px;               
+                
         }
 
-        .moitie, .petitcadre, .moyencadre{
-                width: 100%;
-                margin-bottom: 25px;                
+        .fort, .frioul{
+                height: 150px;
+                
         }
 
-        
-        .vuelong{
-                height: 170px;
+
+/**     **      **      **      **Mise en place du responsive FOOTER**  **      **      **      **/
+
+        footer{
+                display: flex;
+                flex-direction: column;
+                width: auto;
+                margin-top: 25px;
         }
+
+       
 
     
 }
