--- a/style.css
+++ b/style.css
@@ -67,12 +67,12 @@ nav a{
 nav a:hover, .sinscrire:hover{
         color: #0065FC;
         border-top: 2px solid #0065FC;
-        padding-top: 34px;
+        padding-top: 40px;
  
 }
 
 .sinscrire{
-      padding-top: 36px;
+      padding-top: 48px;
       color: #0065FC;
       font-weight: bold;
       margin-left: 5px;
@@ -635,7 +635,7 @@ li{
         }
         
     .choix:nth-child(2) ul{
-            padding-inline-start: 0;
+            padding-inline-start: initial;
             width:100%;
             
     }
