--- a/style.css
+++ b/style.css
@@ -16,15 +16,15 @@ body{
     width: auto;
     height: auto;
     margin: auto;
-    padding-left: 20px;
-    padding-right: 20px;
-   
-
+    
+    
 }
 /*  ***     ***     *** Mise en place de la section Header***      ***     ***  */
 header{
-    display: flex;
-    justify-content: space-between;
+        display: flex;
+        justify-content: space-between;
+        padding-left: 20px;
+        padding-right: 20px;
     
 
    
@@ -67,21 +67,28 @@ nav a{
 nav a:hover, .sinscrire:hover{
         color: #0065FC;
         border-top: 2px solid #0065FC;
-        padding-top: 40px;
+        padding-top: 49px;
  
 }
 
 .sinscrire{
-      padding-top: 48px;
+      padding-top: 49px;
       color: #0065FC;
       font-weight: bold;
       margin-left: 5px;
+      border-top: 2px solid white;
 
 
 }
 
 
 /*  ***     ***     *** Mise en page de la section recherche***     ***     ***  */
+
+#search{
+        padding-left: 20px;
+        padding-right: 20px;
+}
+
 h1{
         
         
@@ -115,6 +122,7 @@ p{
        font-family: "Ralewaybold";
        color: black;
        font-size: 1.1em;
+       
 }
 
 .rechercher{
@@ -212,6 +220,9 @@ p{
         justify-content: space-around;
         height: 100%;
         width: 100%;
+        padding-left: 20px;
+        padding-right: 20px;
+        margin: auto;
         
 }
 
@@ -432,6 +443,9 @@ aside .etoilebleu .etoilegrise{
         justify-content: space-between;
         width: 100%;
         margin-bottom: 60px;
+        padding-left: 20px;
+        padding-right: 20px;
+        margin: auto;
                 
 }
 
@@ -588,6 +602,7 @@ li{
             
             margin: 0%;
             padding: 1px;
+            overflow-x: hidden;
             
             
     }
@@ -599,7 +614,7 @@ li{
     }
 
     .logoloca{
-            padding: 9px 15px 12px 15px;
+            padding: 12px 15px 12px 15px;
 
     }
 
@@ -681,7 +696,7 @@ li{
             margin-left: 6%;
             width: 100%;
             justify-content: center;
-            font-size: 1em;
+            font-size: 1.1em;
                                 
             
     }
@@ -693,7 +708,7 @@ li{
 
 
     .rechercher{
-            visibility: hidden;
+            display: none;
     }
 
     
@@ -705,7 +720,7 @@ li{
         font-size: 0.8em;
         border: none;
         border-radius: 10px;
-        margin-left: -27%; 
+        margin-left: -2px; 
         padding: 12px 14px 12px 14px;
     }
 
@@ -736,7 +751,7 @@ li{
     }
 
     .money, .famille{
-            margin-right: -12%;
+            margin-right: -40px;
     }
 
     .infosup{
@@ -784,6 +799,7 @@ li{
             height: auto;
             background-color: white;
             justify-content: center;
+            margin-right: 0px;
            
         }
 
@@ -829,7 +845,7 @@ li{
         .entier{
                 height: 200px;
                 width: 90%;
-                margin-bottom: 20px; 
+                margin-bottom: 30px; 
         }
 
         .cadrelong{
@@ -862,6 +878,11 @@ li{
         .fort, .frioul{
                 height: 150px;
                 
+        }
+
+        .moyencadre, .petitcadre, .moitie{
+                height: 200px;
+                margin-bottom: 20px;
         }
 
 
